--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <url>http://www.awesomeService.com</url>
   <modules>
     <module>Customer</module>
+      <module>Fraud</module>
   </modules>
 
   <properties>
