--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <spring.boot.maven.plugin.version>3.0.2</spring.boot.maven.plugin.version>
     <spring.boot.dependencies.version>3.0.2</spring.boot.dependencies.version>
+    <spring.cloud-version>2022.0.1</spring.cloud-version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -33,6 +34,14 @@
         <scope>import</scope>
         <type>pom</type>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring.cloud-version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -49,7 +58,7 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (maybe moved to parent pom) -->
      <plugins>
         <plugin>
           <groupId>org.springframework.boot</groupId>
@@ -59,4 +68,5 @@
      </plugins>
     </pluginManagement>
   </build>
+
 </project>
